2eme partie projet2

--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
 
 <body>
   <header>
-    <div  class="photoblog"><img class="logoimage" src="image\logojapon.png" alt="logoimage"/></div>
     <nav>
       <ul>
-        <li><a href="presentation.html">ma presentation</a></li>
-        <li><a href="mes hobbis.html">mes-hobbis</a></li>
-        <li><a href="contact.html">contact</a></li>
+          <li><a href="presentation.html">ma presentation</h1></a></li>
+          <li><a href="mes hobbis.html">mes-hobbis</a></li>
+          <li><a href="contact.html">contact</a></li>
       </ul>
-    </nav>
+  </nav>
+  <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
   </header>
   <main class="pagecontact">
     <div class="container">
@@ -75,7 +75,7 @@
   </main>
   <footer>
     <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
-    <p>&copy 2024 Wild code school<br>made 💓by wilders image </p> 
+    <p>&copy 2024 Wild code school<br>made 💓by wilders image </p>
   </footer>
 </body>
 
