--- a/mes hobbis.html
+++ b/mes hobbis.html
@@ -2,29 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><mon-blog-francojap></mon-blog-francojap></title>
-    <link rel="stylesheet" href="style.css">
-    <title>mes hobbis</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><mon-blog-francojap></mon-blog-francojap></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>mes hobbies</title>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="presentation.html">ma presentation</a></li>
-                <li><a href="mes hobbis.html">mes-hobbis</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1 class="welcome">(bienvenue sur mes hobbis)</h1>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="presentation.html">ma presentation</a></li>
+        <li><a href="mes hobbis.html">mes-hobbies</a></li>
+        <li><a href="contact.html">contact</a></li>
+      </ul>
+    </nav>
+    <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+  </header>
+  <h1 class="welcome">(bienvenue sur ma page de mes hobbies)</h1>
+  <main>
+    <div class="intro">
+      <h1> Mes hobbies <div class="container"></h1>
+      <h2>Mes mangas prefere</h2>
+    <div class="mangaspref">
+      <img src="imgmanege\1.png" alt="mangas">
+      <img src="imgmanege\2.png" alt="mangas">
+      <img src="imgmanege\3.png" alt="mangas">
+      <img src="imgmanege\4.png" alt="mangas">
+       <img src="imgmanege\5.png" alt="mangas">
+       <img src="imgmanege\6.png" alt="mangas">
+      </div>
+      <h1>mes animes prefere <div class="container"></h1>
+        <div class="animespref">
+        <img src="les animes mangas\chihiro.jpg" alt="anime">
+        <img src="les animes mangas\kiki la sorciere.png" alt="anime">
+        <img src="les animes mangas\princesse monoké.png" alt="anime">
+        <img src="les animes mangas\le tombo d lucioles.png "alt="anime">
+        <img src="les animes mangas\le chateau ds le ciel.png"alt="anime">
+        <img src="les animes mangas\mirai.png"alt="anime">
+        </div>
+        <h2>Ma creation video sur youtube</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vzwm7eMRoa0?si=jTejZGUXWOESR53B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-</body>
-<footer>
+        <h1>Mon film en ce moment <div class="container"></h1>
+          <img src="film pref\shogun.png"alt="film"><h2> A l'époque Heian (734-1185), le shogun désignait un général chargé de diriger la conquête et la pacification de la région du Tohoku face aux autochtones Emishi. En ces temps, on utilisait l'appellation « Seii taishôgun », traduit par « grand général pacificateur des barbares ». </h2>
+
+  </main>
+  <footer>
     <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
-    <p>&copy 2024 Wild code school<br>made 💓by wilders image </p> 
-</footer>
+    <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
+    <p>&copy 2024 Wild code school<br>made 💓by wilders image </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
 
 </html>
