--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,12 @@
   <header>
     <nav>
       <ul>
-          <li><a href="presentation.html">ma presentation</h1></a></li>
-          <li><a href="mes hobbis.html">mes-hobbis</a></li>
-          <li><a href="contact.html">contact</a></li>
-      </ul>
+        <li><a href="presentation.html"><img src="image\image.png" ></a></li>
+        <li><a href="mes hobbis.html"><img src="image\nav3.png" ></a></li>
+        <li><a href="contact.html"><img src="image\nav2.png" ></a></li>
+    <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+    </ul>  
   </nav>
-  <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
   </header>
   <main class="pagecontact">
     <div class="container">
@@ -74,7 +74,11 @@
     </div>
   </main>
   <footer>
-    <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
+    <div class="footer-logo">
+      <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
+      <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
+      <a href="https://discord.gg/a44XKPQq"><img class="logodiscord" src="image\discord.png"></a>
+  </div>
     <p>&copy 2024 Wild code school<br>made 💓by wilders image </p>
   </footer>
 </body>
