--- a/mes hobbis.html
+++ b/mes hobbis.html
@@ -10,49 +10,92 @@
   <link rel="stylesheet" href="style.css">
   <title>mes hobbies</title>
 </head>
+
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="presentation.html">ma presentation</a></li>
-        <li><a href="mes hobbis.html">mes-hobbies</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li><a href="presentation.html"><img src="image\image.png"></a></li>
+        <li><a href="mes hobbis.html"><img src="image\nav3.png"></a></li>
+        <li><a href="contact.html"><img src="image\nav2.png"></a></li>
+        <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
       </ul>
     </nav>
-    <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
   </header>
-  <h1 class="welcome">(bienvenue sur ma page de mes hobbies)</h1>
+  <div class="container"><img class="title-image" src="image\-bienvenue-sur-ma-page-de-mes-19-04-2024.gif" alt="title">
+  </div>
   <main>
     <div class="intro">
-      <h1> Mes hobbies <div class="container"></h1>
-      <h2>Mes mangas prefere</h2>
-    <div class="mangaspref">
-      <img src="imgmanege\1.png" alt="mangas">
-      <img src="imgmanege\2.png" alt="mangas">
-      <img src="imgmanege\3.png" alt="mangas">
-      <img src="imgmanege\4.png" alt="mangas">
-       <img src="imgmanege\5.png" alt="mangas">
-       <img src="imgmanege\6.png" alt="mangas">
-      </div>
-      <h1>mes animes prefere <div class="container"></h1>
-        <div class="animespref">
-        <img src="les animes mangas\chihiro.jpg" alt="anime">
-        <img src="les animes mangas\kiki la sorciere.png" alt="anime">
-        <img src="les animes mangas\princesse monoké.png" alt="anime">
-        <img src="les animes mangas\le tombo d lucioles.png "alt="anime">
-        <img src="les animes mangas\le chateau ds le ciel.png"alt="anime">
-        <img src="les animes mangas\mirai.png"alt="anime">
+      <h1> Mes hobbies</h1>
+      <h2>Mes mangas preferés</h2>
+      <div>
+        <div class="slider-container">
+          <div class="menu">
+            <label for="slide-dot-1"></label>
+            <label for="slide-dot-2"></label>
+            <label for="slide-dot-3"></label>
+            <label for="slide-dot-4"></label>
+            <label for="slide-dot-5"></label>
+            <label for="slide-dot-6"></label>
+            <label for="slide-dot-7"></label>
+            
+          </div>
+
+          <input class="slide-input" id="slide-dot-1" type="radio" name="slides" checked>
+          <img class="slide-img" src="imgmanege\imag1.png">
+
+          <input class="slide-input" id="slide-dot-2" type="radio" name="slides">
+          <img class="slide-img" src="imgmanege\imag2.png">
+
+          <input class="slide-input" id="slide-dot-3" type="radio" name="slides">
+          <img class="slide-img" src="imgmanege\imag3.png">
+
+          <input class="slide-input" id="slide-dot-4" type="radio" name="slides">
+          <img class="slide-img" src="imgmanege\imag4.png">
+
+          <input class="slide-input" id="slide-dot-5" type="radio" name="slides">
+          <img class="slide-img" src="imgmanege\imag5.png">
+
+          <input class="slide-input" id="slide-dot-6" type="radio" name="slides">
+          <img class="slide-img" src="imgmanege\imag6.png">
+
+          <input class="slide-input" id="slide-dot-7" type="radio" name="slides">
+          <img class="slide-img" src="imgmanege\imag7.png">
         </div>
+
+        <h1>mes animes preferes</h1>
+        <div class="animespref">
+          <img src="les animes mangas\chihiro.jpg" alt="anime">
+          <img src="les animes mangas\kiki la sorciere.png" alt="anime">
+          <img src="les animes mangas\princesse monoké.png" alt="anime">
+          <img src="les animes mangas\le tombo d lucioles.png " alt="anime">
+          <img src="les animes mangas\le chateau ds le ciel.png" alt="anime">
+          <img src="les animes mangas\mirai.png" alt="anime">
+        </div>
+        <div class="actualite-film">
         <h2>Ma creation video sur youtube</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/vzwm7eMRoa0?si=jTejZGUXWOESR53B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vzwm7eMRoa0?si=jTejZGUXWOESR53B"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="actualite-film">
+        <h1>Mon film en ce moment </h1>
+        <img src="film pref\shogun.png" alt="film">
 
-        <h1>Mon film en ce moment <div class="container"></h1>
-          <img src="film pref\shogun.png"alt="film"><h2> A l'époque Heian (734-1185), le shogun désignait un général chargé de diriger la conquête et la pacification de la région du Tohoku face aux autochtones Emishi. En ces temps, on utilisait l'appellation « Seii taishôgun », traduit par « grand général pacificateur des barbares ». </h2>
-
+        <h2> A l'époque Heian (734-1185), le shogun désignait un général chargé de diriger la conquête et la
+          pacification de la région du Tohoku face aux autochtones Emishi. En ces temps, on utilisait l'appellation «
+          Seii taishôgun », traduit par « grand général pacificateur des barbares ». </h2>
+      </div>
+    </div>
+    </div>
   </main>
   <footer>
+    <div class="footer-logo">
     <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
     <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
+    <a href="https://discord.gg/a44XKPQq"><img class="logodiscord" src="image\discord.png"></a>
+  </div>
     <p>&copy 2024 Wild code school<br>made 💓by wilders image </p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
