sprint 3 : ajout du responsive + carrousel

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav class="nav-ordi">
       <ul>
         <li><a href="presentation.html"><img src="image\image.png" ></a></li>
         <li><a href="mes hobbis.html"><img src="image\nav3.png" ></a></li>
@@ -19,6 +19,15 @@
     <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
     </ul>  
   </nav>
+  <nav class="nav-portable">
+    <ul>
+      <li><a href="presentation.html"> presentation </a></li>
+      <li><a href="mes hobbis.html">mes hobbies</a></li>
+      <li><a href="contact.html">contactez</a></li>
+      
+  <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+  </ul>  
+</nav>
   </header>
   <main class="pagecontact">
     <div class="container">
@@ -65,11 +74,11 @@
           <textarea id="message" name="message" placeholder="Tapez votre message ici" rows="5" cols="15" maxlength="500"
             wrap></textarea>
         </div>
-        <div class="form-group form-checkpoint form-newsletter">
+        <div class="form-group form-newsletter">
           <label>S'inscrire à la newsletter </label>
           <input type="checkbox" value="newsletter" />
-          <div class="Envoyer"><button type="submit" class="formulaire">Envoyer le formulaire</button></div>
         </div>
+          <div class="Envoyer"><button type="submit" class="formulaire">Envoyer le formulaire</button></div>
       </form>
     </div>
   </main>
