re ma page presentation en index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav-ordi">
           <ul>
-            <li><a href="presentation.html"><img src="image\image.png" ></a></li>
+            <li><a href="index.html"><img src="image\image.png" ></a></li>
             <li><a href="mes hobbis.html"><img src="image\nav3.png" ></a></li>
             <li><a href="contact.html"><img src="image\nav2.png" ></a></li>
         <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
@@ -21,7 +21,7 @@
       </nav>
       <nav class="nav-portable">
         <ul>
-          <li><a href="presentation.html"> presentation </a></li>
+          <li><a href="index.html"> presentation </a></li>
           <li><a href="mes hobbis.html">mes hobbies</a></li>
           <li><a href="contact.html">contactez</a></li>
           
