--- a/index.html
+++ b/index.html
@@ -12,48 +12,53 @@
 <body>
     <header>
         <nav class="nav-ordi">
-          <ul>
-            <li><a href="index.html"><img src="image\image.png" ></a></li>
-            <li><a href="mes hobbis.html"><img src="image\nav3.png" ></a></li>
-            <li><a href="contact.html"><img src="image\nav2.png" ></a></li>
-        <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
-        </ul>  
-      </nav>
-      <nav class="nav-portable">
-        <ul>
-          <li><a href="index.html"> presentation </a></li>
-          <li><a href="mes hobbis.html">mes hobbies</a></li>
-          <li><a href="contact.html">contactez</a></li>
-          
-      <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
-      </ul>  
-    </nav>
-      </header>
+            <ul>
+                <li><a href="index.html"><img src="image\image.png"></a></li>
+                <li><a href="mes hobbis.html"><img src="image\nav3.png"></a></li>
+                <li><a href="contact.html"><img src="image\nav2.png"></a></li>
+                <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+            </ul>
+        </nav>
+        <nav class="nav-portable">
+            <ul>
+                <li><a href="index.html"> presentation </a></li>
+                <li><a href="mes hobbis.html">mes hobbies</a></li>
+                <li><a href="contact.html">contactez</a></li>
+
+                <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+            </ul>
+        </nav>
+    </header>
     <h1 class="welcome">(bienvenue sur mon-blog-francojap)</h1>
     <div class="compteur"><a href="http://www.mon-compteur.fr">Nombre de visiteurs<br><img
                 src="http://www.mon-compteur.fr/html_c02genv2-77516-4" /></a></div>
     <main>
         <div class="intro">
-            <p> je m'appel David, j'ai 42 ans et je suis marier depuis Mai 2023 et j'ai un fils.</p>
+            <p>Je m'appelle David, j'ai 42 ans. Je suis marié depuis mai 2023 et j'ai un fils.</p>
 
-            <p>Il y a des années, on m'a fait découvrir le beau pays du japon dans un premier temps de part les jeux
-                vidéo comme final Fantasy puis les annimés et les mangas , et univers m'a vraiment plus. </p>
-            <p>Par la suite, j'ai crée une association sur le Japon pour approfondir mes connaissances sur la culture
-                japonaise et en découvrir d'autre, exemple la cuisine, les origamis, la cérémonie du thè et la musique. </p>
-            <p>J'ai donc crée un discord avec un forum et un groupe franco japonais pour l'échange culturel et apprendre
-                la langue, je ne connais que quelques mots.</p>
-            <p>Je réverais d'aller faire un petit voyage au Japon et visiter les villes les plus populaires.</p>
-            <p>Par Ailleur, je pratique le déssin de manga à mes heures perdues, j'adore également la décoration
-                japonaise et les jardins japonais.</p>
-            <p>Je vous dis à très bientôt Mata Kondo ! Hello everybody ! Ohayō !</p>
+            <p>Il y a des années on m'a fait découvrir le beau pays du Japon dans un premier temps de part les jeux
+                vidéos comme Final Fantasy puis les animes et les mangas. Cet univers m'a vraiment plu.</p>
+
+            <p>Par la suite, j'ai créé une association sur le Japon pour approfondir mes connaissances sur leur culture
+                et en découvrir d'autres : la cuisine, les origamis, la cérémonie du thé et la musique.</p>
+
+            <p>J'ai donc créé un discord avec un forum et un groupe franco japonais pour l'échange culturel et apprendre
+                la langue (pour le moment je ne connais que quelques mots).</p>
+
+            <p>Je rêverais d'aller faire un petit voyage au Japon et visiter les villes les plus populaires.</p>
+
+            <p>Par ailleurs, je pratique le dessin de mangas à mes heures perdues. J'adore également la décoration et
+                les jardins japonais,Je vous dis à bientôt ...Mata Kondo ! Hello everybody ! Ohayō !</p>
+
         </div>
     </main>
     <footer>
         <div class="footer-logo">
-        <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
-        <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
-        <a href="https://discord.gg/a44XKPQq"><img class="logodiscord" src="image\discord.png"></a>
-    </div>
+            <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook"
+                    src="image\logoxcf.png"></a>
+            <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
+            <a href="https://discord.gg/a44XKPQq"><img class="logodiscord" src="image\discord.png"></a>
+        </div>
         <p>&copy 2024 Wild code school<br>made 💓by wilders image </p>
     </footer>
 
