--- a/mes hobbis.html
+++ b/mes hobbis.html
@@ -13,21 +13,21 @@
   <header>
     <nav class="nav-ordi">
       <ul>
-        <li><a href="index.html"><img src="image\image.png" ></a></li>
-        <li><a href="mes hobbis.html"><img src="image\nav3.png" ></a></li>
-        <li><a href="contact.html"><img src="image\nav2.png" ></a></li>
-    <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
-    </ul>  
-  </nav>
-  <nav class="nav-portable">
-    <ul>
-      <li><a href="index.html"> presentation </a></li>
-      <li><a href="mes hobbis.html">mes hobbies</a></li>
-      <li><a href="contact.html">contactez</a></li>
-      
-  <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
-  </ul>  
-</nav>
+        <li><a href="index.html"><img src="image\image.png"></a></li>
+        <li><a href="mes hobbis.html"><img src="image\nav3.png"></a></li>
+        <li><a href="contact.html"><img src="image\nav2.png"></a></li>
+        <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+      </ul>
+    </nav>
+    <nav class="nav-portable">
+      <ul>
+        <li><a href="index.html"> presentation </a></li>
+        <li><a href="mes hobbis.html">mes hobbies</a></li>
+        <li><a href="contact.html">contactez</a></li>
+
+        <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
+      </ul>
+    </nav>
   </header>
   <div class="container-title">
     <img class="title-image" src="image\-bienvenue-sur-ma-page-de-mes-19-04-2024.gif" alt="title">
@@ -36,35 +36,35 @@
     <div class="intro">
       <h1> Mes hobbies</h1>
       <h2>Mes mangas preferés</h2>
-        <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="false" space-between="30"
-        centered-slides="true" autoplay-delay="3500" autoplay-disable-on-interaction="false">
-          <swiper-slide><img src="imgmanege\imag1.png" />
-          </swiper-slide>
-          <swiper-slide> <img src="imgmanege\imag2.png"></swiper-slide>
-          <swiper-slide>  <img  src="imgmanege\imag3.png"></swiper-slide>
-          <swiper-slide> <img src="imgmanege\imag4.png"></swiper-slide>
-          <swiper-slide><img  src="imgmanege\imag5.png"></swiper-slide>
-          <swiper-slide><img  src="imgmanege\imag6.png"></swiper-slide>
-          <swiper-slide> <img  src="imgmanege\imag7.png"></swiper-slide>
+      <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="false"
+        space-between="30" centered-slides="true" autoplay-delay="3500" autoplay-disable-on-interaction="false">
+        <swiper-slide><img src="imgmanege\imag1.png" />
+        </swiper-slide>
+        <swiper-slide> <img src="imgmanege\imag2.png"></swiper-slide>
+        <swiper-slide> <img src="imgmanege\imag3.png"></swiper-slide>
+        <swiper-slide> <img src="imgmanege\imag4.png"></swiper-slide>
+        <swiper-slide><img src="imgmanege\imag5.png"></swiper-slide>
+        <swiper-slide><img src="imgmanege\imag6.png"></swiper-slide>
+        <swiper-slide> <img src="imgmanege\imag7.png"></swiper-slide>
       </swiper-container>
 
-        <h1>mes animes preferes</h1>
-        <div class="animespref">
-          <img src="les animes mangas\chihiro.jpg" alt="anime">
-          <img src="les animes mangas\kiki la sorciere.png" alt="anime">
-          <img src="les animes mangas\princesse monoké.png" alt="anime">
-          <img src="les animes mangas\le tombo d lucioles.png " alt="anime">
-          <img src="les animes mangas\le chateau ds le ciel.png" alt="anime">
-          <img src="les animes mangas\mirai.png" alt="anime">
-        </div>
-        <div class="actualite-film">
-          <h2>Ma creation video sur youtube</h2>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/vzwm7eMRoa0?si=jTejZGUXWOESR53B"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div class="actualite-film">
+      <h1>mes animes preferes</h1>
+      <div class="animespref">
+        <img src="les animes mangas\chihiro.jpg" alt="anime">
+        <img src="les animes mangas\kiki la sorciere.png" alt="anime">
+        <img src="les animes mangas\princesse monoké.png" alt="anime">
+        <img src="les animes mangas\le tombo d lucioles.png " alt="anime">
+        <img src="les animes mangas\le chateau ds le ciel.png" alt="anime">
+        <img src="les animes mangas\mirai.png" alt="anime">
+      </div>
+      <div class="actualite-film">
+        <h2>Ma creation video sur youtube</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vzwm7eMRoa0?si=jTejZGUXWOESR53B"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div class="actualite-film">
         <h2>Mon film en ce moment </h2>
         <img src="film pref\shogun.png" alt="film">
 
@@ -77,10 +77,10 @@
   </main>
   <footer>
     <div class="footer-logo">
-    <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
-    <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
-    <a href="https://discord.gg/a44XKPQq"><img class="logodiscord" src="image\discord.png"></a>
-  </div>
+      <a href="https://www.facebook.com/groups/francojaponais/"><img class="logofbook" src="image\logoxcf.png"></a>
+      <a href="https://twitter.com/davdevep51"><img class="logoduX" src="image\logoduX.png"></a>
+      <a href="https://discord.gg/a44XKPQq"><img class="logodiscord" src="image\discord.png"></a>
+    </div>
     <p>&copy 2024 Wild code school<br>made 💓by wilders image </p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
