corection  du css du texte presentation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav-ordi">
             <ul>
-                <li><a href="index.html"><img src="image\image.png"></a></li>
+                <li><a href="/"><img src="image\image.png"></a></li>
                 <li><a href="mes hobbis.html"><img src="image\nav3.png"></a></li>
                 <li><a href="contact.html"><img src="image\nav2.png"></a></li>
                 <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
@@ -21,7 +21,7 @@
         </nav>
         <nav class="nav-portable">
             <ul>
-                <li><a href="index.html"> presentation </a></li>
+                <li><a href="/"> presentation </a></li>
                 <li><a href="mes hobbis.html">mes hobbies</a></li>
                 <li><a href="contact.html">contactez</a></li>
 
@@ -34,20 +34,20 @@
                 src="http://www.mon-compteur.fr/html_c02genv2-77516-4" /></a></div>
     <main>
         <div class="intro">
-            <p>Je m'appelle David, j'ai 42 ans. Je suis marié depuis mai 2023 et j'ai un fils.</p>
+            <p class="paragraph-index">Je m'appelle David, j'ai 42 ans. Je suis marié depuis mai 2023 et j'ai un fils.</p>
 
-            <p>Il y a des années on m'a fait découvrir le beau pays du Japon dans un premier temps de part les jeux
+            <p class="paragraph-index">Il y a des années on m'a fait découvrir le beau pays du Japon dans un premier temps de part les jeux
                 vidéos comme Final Fantasy puis les animes et les mangas. Cet univers m'a vraiment plu.</p>
 
-            <p>Par la suite, j'ai créé une association sur le Japon pour approfondir mes connaissances sur leur culture
+            <p class="paragraph-index">Par la suite, j'ai créé une association sur le Japon pour approfondir mes connaissances sur leur culture
                 et en découvrir d'autres : la cuisine, les origamis, la cérémonie du thé et la musique.</p>
 
-            <p>J'ai donc créé un discord avec un forum et un groupe franco japonais pour l'échange culturel et apprendre
+            <p class="paragraph-index">J'ai donc créé un discord avec un forum et un groupe franco japonais pour l'échange culturel et apprendre
                 la langue (pour le moment je ne connais que quelques mots).</p>
 
-            <p>Je rêverais d'aller faire un petit voyage au Japon et visiter les villes les plus populaires.</p>
+            <p class="paragraph-index">Je rêverais d'aller faire un petit voyage au Japon et visiter les villes les plus populaires.</p>
 
-            <p>Par ailleurs, je pratique le dessin de mangas à mes heures perdues. J'adore également la décoration et
+            <p class="paragraph-index">Par ailleurs, je pratique le dessin de mangas à mes heures perdues. J'adore également la décoration et
                 les jardins japonais,Je vous dis à bientôt ...Mata Kondo ! Hello everybody ! Ohayō !</p>
 
         </div>
