--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
                 <div class="photoblog"><img class="logoimage" src="image\mon blog.png" alt="logoimage" /></div>
             </ul>
         </nav>
+
     </header>
     <h1 class="welcome">(bienvenue sur mon-blog-francojap)</h1>
     <div class="compteur"><a href="http://www.mon-compteur.fr">Nombre de visiteurs<br><img
                 src="http://www.mon-compteur.fr/html_c02genv2-77516-4" /></a></div>
+                <div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/fr/city/1850147"><span style="color:gray;">Heure actuelle</span><br />Tokyo, Japon</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=fr&size=medium&timezone=Asia%2FTokyo" width="100%" height="115" frameborder="0" seamless></iframe> </div>
     <main>
         <div class="intro">
             <p class="paragraph-index">Je m'appelle David, j'ai 42 ans. Je suis marié depuis mai 2023 et j'ai un fils.</p>
