correction histoire du film

--- a/mes hobbis.html
+++ b/mes hobbis.html
@@ -68,9 +68,7 @@
         <h2>Mon film en ce moment </h2>
         <img src="film pref\shogun.png" alt="film">
 
-        <p> A l'époque Heian (734-1185), le shogun désignait un général chargé de diriger la conquête et la
-          pacification de la région du Tohoku face aux autochtones Emishi. En ces temps, on utilisait l'appellation «
-          Seii taishôgun », traduit par « grand général pacificateur des barbares ». </p>
+        <p> *Le Japon médiéval vit sous d'interminables guerres. Un navigateur britannique Blackthorne, échoue dans un village de pêcheurs. Le chef, Toranaga, le fait accéder au rang de samouraï Blackthorne apprend à Toranaga que le Japon est écrasé par le pouvoir qu'ont les missionnaires jésuites portugais.* </p>
       </div>
     </div>
     </div>
